tests/accept/stateTest.ul
int foo(int[4] i)
{
	string s;
	int x;
	float y;
	char c;
	boolean b;
	s = "Braydon";
	x = 69;
	y = 69.69;
	c = 'B';
	b = "false";

}
