tests/reject/notsix.ul
int foo()
{

float x = 3.14;
boolean b;
b < == 2;

}
